# Clinical-summary

./: .env.example  .gitignore  README.md  pyproject.toml
agent/: agent.py
app/: config.py  main.py
app/api/routes/: __init__.py  health.py  summary.py
app/fhir/: client.py
app/fhir/resources/: __init__.py  allergy.py  base.py  condition.py  medication_request.py  observation.py  patient.py
app/llm/: client.py
app/llm/prompts/: __init__.py  assembler.py  final_prompt.py  section_prompts.py
app/schemas/: __init__.py  responses.py
tests/: conftest.py
